--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,15 @@
-name:CI
+name: CI
+
 on: [push]
+
 jobs:
-run:
-  runs-on: ubuntu-latest
-  steps:
-      -uses:actions/checkout@v3
-      -run: python hello.py
+  run:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run Python script
+        run: python hello.py
+
